@@ -1,7 +1,7 @@
 /* -*- mode: objc -*-
  Project: DataBasin
  
- Copyright (C) 2016 Free Software Foundation
+ Copyright (C) 2016-2017 Free Software Foundation
  
  Author: Riccardo Mottola
  
@@ -24,26 +24,17 @@
 
 #import <Foundation/Foundation.h>
 
+#import "DBFileWriter.h"
+
 @protocol DBLoggerProtocol;
 
-@interface DBHTMLWriter : NSObject
+@interface DBHTMLWriter : DBFileWriter
 {
-  id<DBLoggerProtocol> logger;
-  NSArray      *fieldNames;
-  NSArray      *fieldTypes;
-  NSFileHandle *file;
   NSString     *newLine;
   NSStringEncoding encoding;
   unsigned     bomLength;
 }
 
-- (id)initWithHandle:(NSFileHandle *)fileHandle;
-- (void)setLogger:(id<DBLoggerProtocol>)l;
-- (void)setFieldNames: (id)obj andWriteThem: (BOOL)flag;
-- (void)writeStart;
-- (void)writeEnd;
-- (void)writeDataSet:(NSArray *)array;
-- (NSString *)formatOneLine:(id)data forHeader:(BOOL) headerFlag;
 - (void)setStringEncoding: (NSStringEncoding) enc;
 
 
